--- a/Source/Console-App.csproj
+++ b/Source/Console-App.csproj
@@ -4,8 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Console_App</RootNamespace>
-    <OutputRoot Condition=" '$(OutputRoot)'=='' ">..\..\build\Console-App\bin</OutputRoot>
-    <BaseOutputPath>..\..\build\Console-App\bin</BaseOutputPath>
+    <OutputRoot Condition=" '$(OutputRoot)'=='' ">..\build\Console-App\bin</OutputRoot>
+    <BaseOutputPath>..\build\Console-App\bin</BaseOutputPath>
   </PropertyGroup>
 
 </Project>
